# fin-metrics

./: Cargo.toml  LICENSE-MIT  README.md
API_Document/EN/: sharpe_nonannualized_api.md
API_Document/JPN/: sharpe_nonannualized_api.md
src/: lib.rs  sharpe.rs
src/metrics/: mean.rs  mean_excess.rs  mod.rs  sharpe.rs  std_dev.rs
src/metrics/sum/: kbn_ext.rs  mod.rs  running_kbn.rs
